--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b.o.p---bartender-of-pony",
+  "name": "b.o.p---bartenders-of-pony",
   "private": true,
   "version": "0.0.0",
   "type": "module",
